# terraform-provider-corefunc

./: .dcignore  .ecrc  .editorconfig  .editorconfig-checker.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .golangci.yml  .gommit.toml  .goreleaser.yml  .lefthook.yml  .licensei.cache  .licensei.toml  .licenses.cache.json  .mailmap  .markdownlint.json  .pre-commit-config.yaml  .rumdl.toml  .shellcheckrc  .shuck.toml  .taplo.toml  .tflint.hcl  .tfsec.yml  .trivyignore  .yamlfmt.yml  .yamllint  ACKNOWLEDGMENTS.md  AUTHORS  BINSIZE.md  Brewfile  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS  COVERAGE.md  LICENSE-APACHE-2.0.txt  LICENSE.md  LICENSE.txt  Makefile  README.md  (+22 more)
.config-manager.d/: config.toml  golang.toml  standard.toml
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: commit-msg.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dco.yml  dependabot.yml  dependency-review-config.yml  zizmor.yml
.kirograph/: .gitignore  README.md
bats/: ds_hash_argon2id.bats.sh  ds_hash_argon2id_base64.bats.sh  ds_hash_bcrypt.bats.sh  ds_hash_hmac_base64sha256.bats.sh  ds_hash_hmac_sha256.bats.sh  ds_hash_md5.bats.sh  ds_hash_md5_base64.bats.sh  ds_hash_scrypt.bats.sh  ds_hash_scrypt_base64.bats.sh  ds_hash_sha1.bats.sh  ds_hash_sha1_base64.bats.sh  ds_hash_sha256.bats.sh  ds_hash_sha256_base64.bats.sh  ds_hash_sha384.bats.sh  ds_hash_sha384_base64.bats.sh  ds_hash_sha3x256.bats.sh  ds_hash_sha3x256_base64.bats.sh  ds_hash_sha3x384.bats.sh  ds_hash_sha3x384_base64.bats.sh  ds_hash_sha3x512.bats.sh  ds_hash_sha3x512_base64.bats.sh  ds_map_key_if.bats.sh  (+40 more)
(+900 files in other folders)
