[tool.poetry]
name         = "terraform-provider-corefunc"
version      = "0.0.1"
description  = "Only used for development."
authors      = ["Ryan Parman <rparman@northwood-labs.com>"]
readme       = "README.md"
package-mode = false

  [tool.poetry.dependencies]
  python = "^3.11"

  [tool.poetry.group.dev.dependencies]
  isbinary = "^1.0.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
